# SfSnake

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  Item.cpp  Item.h  LICENSE  MenuScreen.cpp  MenuScreen.h  Obstacle.cpp  Obstacle.h  PauseSccreen.cpp  PauseScreen.h  README.md  Screen.h  Snake.cpp  Snake.h  SnakeNode.cpp  SnakeNode.h  main.cpp
